--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,85 @@
-@import 'https://fonts.googleapis.com/css?family=Koulen|Odibee+Sans|Righteous|Rubik|Signika&display=swap';@import 'https://fonts.googleapis.com/css?family=Work+Sans:900&display=swap';@import 'https://fonts.googleapis.com/css2?family=Rubik&display=swap';@import 'https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap';@import 'https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap';*{margin:0;padding:0}html{scroll-behavior:smooth}body{background-color:#2c2f33;font-family:rubik,sans-serif}.navbar{background-color:#23272a}.navbar .navbar-nav .nav-item .nav-link{color:#a6aab5;font-weight:700;transition:.3s;padding:10px}.navbar .navbar-nav .nav-item .nav-link:hover{color:#fff}.logo{height:42px;width:150px}.user-avatar{border-radius:50%;width:35px;height:35px}.username{font-weight:700}.bar1{width:35px;height:5px;background-color:#fff;margin:6px 0;transition:.4s}.bar2{width:25px;height:5px;background-color:#fff;margin:6px 0;transition:.4s}.bar3{width:15px;height:5px;background-color:#fff;margin:6px 0;transition:.4s}.toggle .bar1{-webkit-transform:rotate(-45deg) translate(-9px,6px);transform:rotate(-45deg) translate(-9px,6px)}.toggle .bar2{opacity:0}.toggle .bar3{-webkit-transform:rotate(45deg) translate(-8px,-8px);transform:rotate(45deg) translate(-8px,-8px)}#addBot{border:2px solid #d4af37;color:#fff;padding:6px 20px;border-radius:4px;margin-top:7px;transition:.3s}#addBot:hover,#addBot:focus{box-shadow:0 .5em .5em -.4em #d4af37;color:#d4af37;transform:translateY(-0.25em)}#menu-toggle{border:2px solid #d4af37;color:#fff;padding:6px 20px;border-radius:4px;margin-top:7px;transition:.3s}.view{border:2px solid #fff;padding-top:15px;padding-bottom:15px;padding-left:50px;padding-right:50px;text-decoration:none;color:#fff;transition:.3s;margin-left:10px}.view:hover,.view:focus{text-decoration:none;color:#23272a;background-color:#fff}.invite{border:2px solid #fff;padding-top:15px;padding-bottom:15px;padding-left:50px;padding-right:50px;text-decoration:none;color:#fff;transition:.3s;margin-left:75px}.invite:hover,.invite:focus{text-decoration:none;color:#23272a;background-color:#fff}.navbar .dropdown-menu{font-size:15px;margin-right:100px;background-color:#17181b;transition:.3s;margin-top:10px}.dropdown-item:hover{color:#fff;background-color:#2b2f33}.jumbotron{background-color:#23272a;color:#a6aab5}.jumbotron .display-4{color:#fff;font-weight:700}.search-container{width:490px;display:block}input#search-bar{width:100%;border:2px solid #aaa;border-radius:4px;outline:none;padding:10px;box-sizing:border-box}input#search-bar:hover,input#search-bar:focus{border-color:#d4af37;box-shadow:0 0 8px #d4af37}.search-button{position:relative;float:right;top:-62px;right:-45px}.tags{padding-top:20px}.tag-badge{min-height:1em;padding-right:6px;padding-left:6px;padding-top:6px;padding-bottom:7px;border-radius:5px;border:2px solid #fff;color:#a6aab5;margin-right:5px;transition:.3s;background-color:#2c2f33;display:inline-block}.tag-badge:hover,.tag-badge:focus{text-decoration:none;background-color:#fff;color:#23272a}.trending{margin-left:10px;margin-right:10px}.trending .display-4{color:#fff;font-weight:700;font-size:60px}.trending .lead{color:#a6aab5;font-size:25px}.lead{font-family:montserrat,sans-serif}.bot-card{height:auto;width:400px;background-color:#23272a;margin-bottom:10px;background-image:url}.bot-card .content{color:#fff}.bot-card .content .bot-name{float:right;padding-top:10px;padding-right:50px;padding-bottom:10px;padding-left:50px;background-color:#d4af37;font-size:20px;border-bottom-left-radius:10px}.bot-card .content .bot-icon{padding:10px;border:2px solid #a6aab5;margin:20px}.bot-card .content .description{padding:10px;overflow:hidden;font-size:20px}hr{background-color:#fff}.bot-card .content .buttons{padding:10px}.botpage{padding-top:2vh;color:#fff}.bot-header{padding:50px}.bot-website{padding:5px;color:#23272a;background-color:#fff;border-radius:4px;transition:.5s}.bot-github{padding:5px;color:#23272a;background-color:#fff;border-radius:4px;transition:.5s}.bot-server{padding:5px;color:#23272a;background-color:#fff;border-radius:4px;transition:.5s}.bot-website:hover,.bot-github:hover,.bot-server:hover{text-decoration:none;color:#fff;background-color:rgba(0,0,0,.31)}.descriptions{padding-top:4vh;font-size:22px}.vertical-align ul{display:flex;list-style:none}.vertical-align ul li{margin-right:10px;font-weight:700;color:#fff}@media(min-width:600px){.cards{grid-template-columns:repeat(2,1fr)}}@media(min-width:900px){.cards{grid-template-columns:repeat(3,1fr)}}.vote{background-color:#414a4c}.s003{position:relative;display:-ms-block;display:block;-ms-flex-pack:center;justify-content:center;background-size:cover;background-position:center center;padding:15px}.s003 form{width:100%;max-width:790px;margin-bottom:0}.s003 form .inner-form{background:#fff;display:-ms-flexbox;display:flex;width:100%;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-align:center;align-items:center;box-shadow:0 8px 20px 0 rgba(0,0,0,.15);border-radius:3px}.s003 form .inner-form .input-field{height:68px}.s003 form .inner-form .input-field input{height:100%;background:0 0;border:0;display:block;width:100%;padding:10px 32px;font-size:16px;color:#555}.s003 form .inner-form .input-field input.placeholder{color:#888;font-size:16px}.s003 form .inner-form .input-field input:-moz-placeholder{color:#888;font-size:16px}.s003 form .inner-form .input-field input::-webkit-input-placeholder{color:#888;font-size:16px}.s003 form .inner-form .input-field input:hover,.s003 form .inner-form .input-field input:focus{box-shadow:none;outline:0;background-color:#fff}.s003 form .inner-form .input-field.first-wrap{width:200px;border-right:1px solid rgba(0,0,0,.1)}.s003 form .inner-form .input-field.first-wrap .choices__inner{background:0 0;border-radius:0;border:0;height:100%;color:#fff;display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;padding:10px 30px}.s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list.choices__list--single{display:-ms-flexbox;display:flex;padding:0;-ms-flex-align:center;align-items:center;height:100%}.s003 form .inner-form .input-field.first-wrap .choices__inner .choices__item.choices__item--selectable.choices__placeholder{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;height:100%;opacity:1;color:#888}.s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list--single .choices__item{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;height:100%;color:#555}.s003 form .inner-form .input-field.first-wrap .choices[data-type*=select-one]:after{right:30px;border-color:#e5e5e5 transparent transparent transparent}.s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown{border:0;background:#fff;padding:20px 30px;margin-top:2px;border-radius:4px;box-shadow:0 8px 20px 0 rgba(0,0,0,.15)}.s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown .choices__item--selectable{padding-right:0}.s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item--selectable.is-highlighted{background:#fff;color:#63c76a}.s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item{color:#555;min-height:24px}.s003 form .inner-form .input-field.second-wrap{-ms-flex-positive:1;flex-grow:1}.s003 form .inner-form .input-field.third-wrap{width:74px}.s003 form .inner-form .input-field.third-wrap .btn-search{height:100%;width:100%;white-space:nowrap;color:#fff;border:0;cursor:pointer;background:#868ceb;transition:all .2s ease-out,color .2s ease-out}.s003 form .inner-form .input-field.third-wrap .btn-search svg{width:16px}.s003 form .inner-form .input-field.third-wrap .btn-search:hover{background:#8288e0}.s003 form .inner-form .input-field.third-wrap .btn-search:focus{outline:0;box-shadow:none}@media screen and (max-width:992px){.s003 form .inner-form .input-field{height:50px}}@media only screen and (max-width:500px){.wow{display:none}.btn{margin-top:15px}}.nothing{text-decoration:none}.nothing:hover{text-decoration:none}form.hide-submit input[type=submit]{display:none}.thedescription{width:60vw}@media only screen and (max-width:1000px){.thedescription{width:100vw;margin:0!important}}.smldescription{width:60vw}@media only screen and (max-width:1000px){.smldescription{width:100vw;margin:0!important}}.botimg{width:100px!important;height:100px!important;border-radius:1000px;border:3px solid #fff}.botcards{background-color:#23272a;border-color:#23272a;padding:30px}.card-text{height:60px!important;overflow:auto!important}.card-title{height:30px!important}@media only screen and (max-width:600px){.display-4{font-size:30px!important}.botimg{width:30vw;height:30vw}.botcards{background-color:#23272a;border-color:#23272a;padding:30px;margin:0}.card-text{min-height:75px!important;max-height:200px!important;overflow:auto!important}.centermobile{text-align:center}}
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro&display=swap');
+
+/* Footer Styling */
+/* DOGE WAS HERE */
+.footer-dark {
+    padding: 50px 0;
+    color: #f0f9ff;
+    background-color: var(--void);
+}
+
+.footer-dark h3 {
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 16px
+}
+
+.footer-dark ul {
+    padding: 0;
+    list-style: none;
+    line-height: 1.6;
+    font-size: 14px;
+    margin-bottom: 0
+}
+
+.footer-dark ul a {
+    color: inherit;
+    text-decoration: none;
+    opacity: .6
+}
+
+.footer-dark ul a:hover {
+    opacity: .8
+}
+
+.footer-dark .item.text {
+    margin-bottom: 36px
+}
+.email{
+  color:white;
+  text-decorations:none;
+}
+.email:hover{
+  color:white;
+  text-decorations:underline;
+}
+.email2{
+  color:black;
+  text-decorations:none;
+}
+.email2:hover{
+  color:black;
+  text-decorations:underline;
+}
+decorations:none;
+}
+.h4{
+    color:white!important;
+}
+.h4 b{
+    color:white!important;
+}
+
+.adsmall{
+  display: none;
+}
+
+@media only screen and (max-width: 1500px) {
+  .bigbigad {
+    display:none;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .adbig {
+    display:none;
+    visibility:none;
+    width: 0; height: 0;
+    opacity: 0;
+  }
+  .adsmall { 
+    display: block;
+  }
+}
