--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,15 +35,12 @@
 /* Custom emojis */
 
 .alexcoffee {
-    background-image: url('../images/AlexCoffee.png');
+    background-image: url('../images/emote.gif');
 }
 
-.alexnerd {
-    background-image: url('../images/AlexNerd.png');
-}
 
 .norway {
-    background-image: url('https://twemoji.maxcdn.com/2/svg/1f1f3-1f1f4.svg');
+    background-image: url('https://twemoji.maxcdn.com/2/svg/1f1e9-1f1ea.svg');
     vertical-align: -.3em;
     height: 1.25em;
     width: 1.25em;
